tests/snapshots/examples_fixtures/ModuleGraph__ConstFloatDivideByZero_Module.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/ModuleGraph/ConstFloatDivideByZero_Module.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `ModuleGraph.ConstFloatDivideByZero` doesn't match file path `examples/ModuleGraph/ConstFloatDivideByZero_Module.flx`.

  --> examples/ModuleGraph/ConstFloatDivideByZero_Module.flx:4:1
  |
4 | module ModuleGraph.ConstFloatDivideByZero {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
